# docs/swagger.json
@@ -517,7 +517,7 @@
         },
         "/users": {
             "put": {
-                "description": "Update user information",
+                "description": "Update user information with provided user data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -530,18 +530,18 @@
                 "summary": "Update User",
                 "parameters": [
                     {
-                        "description": "User data",
+                        "description": "User data for update",
                         "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UpdateUser"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "User updated successfully",
                         "schema": {
                             "$ref": "#/definitions/models.User"
                         }
@@ -578,7 +578,7 @@
         },
         "/users/email": {
             "put": {
-                "description": "Update user's email address",
+                "description": "Update user's email address with a new email.",
                 "consumes": [
                     "application/json"
                 ],
@@ -591,7 +591,7 @@
                 "summary": "Update User Email",
                 "parameters": [
                     {
-                        "description": "New Email",
+                        "description": "New Email for update",
                         "name": "email",
                         "in": "body",
                         "required": true,
@@ -695,62 +695,9 @@
                 }
             }
         },
-        "/users/email/verify": {
-            "get": {
-                "description": "Verify the user's email using a token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Verify User Email",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Email Verification Token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Email verified successfully",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid token",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to verify email",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/users/login": {
             "post": {
-                "description": "Authenticate a user and return a JWT token",
+                "description": "Authenticate a user and return a JWT token.",
                 "consumes": [
                     "application/json"
                 ],
@@ -763,7 +710,7 @@
                 "summary": "User Login",
                 "parameters": [
                     {
-                        "description": "Login credentials",
+                        "description": "Login credentials for authentication",
                         "name": "login",
                         "in": "body",
                         "required": true,
@@ -774,7 +721,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "token",
+                        "description": "JWT token",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -803,7 +750,7 @@
         },
         "/users/password": {
             "put": {
-                "description": "Update user's password",
+                "description": "Update user's password with a new password using a reset token.",
                 "consumes": [
                     "application/json"
                 ],
@@ -816,7 +763,14 @@
                 "summary": "Update User Password",
                 "parameters": [
                     {
-                        "description": "New Password",
+                        "type": "string",
+                        "description": "JWT token for user authentication",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "New Password for update",
                         "name": "password",
                         "in": "body",
                         "required": true,
@@ -845,7 +799,7 @@
                         }
                     },
                     "401": {
-                        "description": "User ID not found",
+                        "description": "Invalid or expired token",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -867,7 +821,7 @@
         },
         "/users/password/reset": {
             "post": {
-                "description": "Sends a password reset email to the user",
+                "description": "Sends a password reset email to the user with provided email.",
                 "consumes": [
                     "application/json"
                 ],
@@ -880,7 +834,7 @@
                 "summary": "Send Password Reset Email",
                 "parameters": [
                     {
-                        "description": "User Email",
+                        "description": "User Email for password reset",
                         "name": "email",
                         "in": "body",
                         "required": true,
@@ -922,7 +876,7 @@
         },
         "/users/signup": {
             "post": {
-                "description": "Register a new user",
+                "description": "Register a new user with provided user data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -935,7 +889,7 @@
                 "summary": "User Registration",
                 "parameters": [
                     {
-                        "description": "User data",
+                        "description": "User data for registration",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -946,7 +900,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "User created successfully",
                         "schema": {
                             "$ref": "#/definitions/models.User"
                         }
@@ -972,9 +926,62 @@
                 }
             }
         },
+        "/users/verify": {
+            "post": {
+                "description": "Verify the user's email address using a verification token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Verify User Email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Verification token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Email verified successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid token",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to verify email",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
-                "description": "Retrieve demographic information for a specific user",
+                "description": "Retrieve demographic information for a specific user by ID.",
                 "produces": [
                     "application/json"
                 ],
@@ -993,7 +1000,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "User demographic information",
                         "schema": {
                             "$ref": "#/definitions/models.User"
                         }
@@ -1261,6 +1268,23 @@
             ],
             "properties": {
                 "new_password": {
+                    "type": "string",
+                    "minLength": 6
+                }
+            }
+        },
+        "models.UpdateUser": {
+            "type": "object",
+            "required": [
+                "new_image",
+                "new_user"
+            ],
+            "properties": {
+                "new_image": {
+                    "type": "string",
+                    "minLength": 6
+                },
+                "new_user": {
                     "type": "string",
                     "minLength": 6
                 }
